--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["Julian Schrittwieser <j.schrittwieser@gmail.com>"]
 clap = "2"
 flate2 = "0.2.17"
 chrono = "0.3"
-num = "0.1"
 threadpool = "1.0"
+image = "*"
